# smart-home-agent

./: .env_example  LICENSE  Makefile  README.md  demo.py  docker-compose.yml  pyproject.toml  run.py
app/: Dockerfile  app.py  config.yaml
app/static/: styles.css
app/utils/: agent.py  auth.py  device.py  state.py
data/home_templates/: h1.json  h2.json  h3.json
device_service/: Dockerfile  device_service.py
evals/: agent.py  datasets.py  evaluate_agent.py  evaluate_memory_retrieval.py  evaluate_tool_selection.py  plot_pass_k.py  run_evals.py
evals/graders/: deterministic.py  model_based.py
evals/metrics/: __init__.py  performance.py
evals/tasks/: __init__.py  base.py  device_control.py  direct_commands.py  memory_retrieval.py  tool_selection.py
scripts/: demo.py  run.py
src/: Dockerfile  agent.py  config.py  main.py  memory.py  nodes.py  prompts.py  response_endpoint.py  state.py
src/tools/: __init__.py  device_control.py  user_context.py
