[project]
name = "src"
authors = [
    { name = "Amal Feriani"}
    ]
version = "0.1.0"
description = "Smart Home Agent Course"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10,<3.14"

# Core dependencies
dependencies = [
    "langchain-core>=0.3.34",
    "langchain-groq>=0.2.4",
    "langchain-openai>=0.3.2",
    "langchain-ollama>=0.1.2",
    "langgraph>=0.2.70",
    "opik>=1.8.9,<2.0.0",
    "langchain-community>=0.3.27,<0.4.0",
    "rich>=13.7.0",
    "langgraph-checkpoint-redis>=0.1.0",
    "mem0ai>=0.1.115,<0.2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]

[tool.pip]
extra-index-url = "https://download.pytorch.org/whl/cpu/torch_stable.html"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py312"
